--- a/index.html
+++ b/index.html
@@ -1,19 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Rishaan's portfolio</h1>
-    <h2>I am a web developer</h2>
-    <hr>
-   <h2> <a href="./public/movie-ranking.html">Movie ranking project</a></h2>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src = "assets/images/movie-ranking.png" width = "400" </a>
-    <h2> <a href="./public/birthday-invite.html">birthday-invite project</a></h2>
-    <a href="https://www.youtube.com/shorts/xjaYagkMxkk"><img src = "assets/images/birthday-invite.png" width = "400" ></a>
+<h1>Welcome to My Website!</h1>
+<a href="../4.1 Webpages/public/about.html"><img src="../4.1 Webpages/assets/images/cat.png"></a>
 
-</body>
-</html>
+<hr />
+<a href="../4.1 Webpages/public/contact.html">Contact us</a>
