--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h2>I am a web developer</h2>
     <hr>
    <h2> <a href="./public/movie-ranking.html">Movie ranking project</a></h2>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src = "..assets/images/cat.png" width = "400" </a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src = "cat.png" width = "400" </a>
     <h2> <a href="./public/birthday-invite.html">birthday-invite project</a></h2>
-    <a href="https://www.youtube.com/shorts/xjaYagkMxkk"><img src = "assets/images/birthday-invite.png" width = "400" ></a>
+    <a href="https://www.youtube.com/shorts/xjaYagkMxkk"><img src = "birthday-invite.png" width = "400" ></a>
 
 </body>
 </html>
