--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src = "movie-ranking.png" width = "400" </a>
     <h2> <a href="./public/birthday-invite.html">birthday-invite project</a></h2>
     <a href="https://www.youtube.com/shorts/xjaYagkMxkk"><img src = "birthday-invite.png" width = "400" ></a>
-
+      <h2><a href="/4.3 HTML Porfolio Project/public/about.html">About me</a></h2>
+    
+    <h2><a href="/aboutus.html">Contact us</a></h2>
 </body>
 </html>
