--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +7411452710</p>
+<p>Email: rishaanronish7@gmail.com.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  goofy road<br />
+  Ohio<br />
+  LUND on <br />
 </p>
