--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <p>Email: rishaanronish7@gmail.com.com</p>
 <p>Address:</p>
 <p>
-  goofy road<br />
+  goofy ro,,,ad<br />
   Ohio<br />
   LUND on <br />
   BRUHHHH
