--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Rishaan's portfolio</h1>
     <h2>I am a web developer</h2>
     <hr>
-   <h2> <a href="./public/movie-ranking.html">Movie ranking project</a></h2>
+   <h2> <a href="movie-ranking.html">Movie ranking project</a></h2>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src = "movie-ranking.png" width = "400" </a>
-    <h2> <a href="./public/birthday-invite.html">birthday-invite project</a></h2>
+    <h2> <a href="birthday-invite.html">birthday-invite project</a></h2>
     <a href="https://www.youtube.com/shorts/xjaYagkMxkk"><img src = "birthday-invite.png" width = "400" ></a>
       <h2><a href="about.html">About me</a></h2>
     
